# RestApiAirTransportation

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml  setup.sh
migration/: env.py
migration/versions/: 2023_12_16_2352-d7123ce5bd7e_init.py  2023_12_17_1555-e540edf560c0_add_client_available_cities_client_order.py
src/: main.py
src/available_cities/: dependencies.py  models.py  router.py  schemas.py  service.py
src/aviation_personnel/: dependencies.py  models.py  router.py  schemas.py  service.py
src/client/: dependencies.py  models.py  router.py  schemas.py  service.py
src/core/: config.py  database.py  models.py
src/flight/: models.py
src/transport/: models.py
